# opm_coils

./: .gitignore  LICENSE  README.rst  pyproject.toml
docs/: Makefile  api.rst  assembly.rst  conf.py
examples/: README.rst  interactive.py  plot_compare_sef.py  plot_helmet.py  plot_make_coil.py  plot_pcb_io.py  plot_pcb_viz.py  plot_planar_map.py
examples/data/: Bxyz_0mA.txt  Bxyz_optimized.txt  Bxyz_optimized_dc_then_gradient.txt  fine_zero_x.txt  fine_zero_y.txt  fine_zero_z.txt  helmet_99channel_size-60.fif  mapping.json
hardware/Bx_coil/first/: coil_template_first-B_Cu.gbr  coil_template_first-B_Mask.gbr  coil_template_first-B_Paste.gbr  coil_template_first-B_Silkscreen.gbr  coil_template_first-Edge_Cuts.gbr  coil_template_first-F_Cu.gbr  coil_template_first-F_Mask.gbr  coil_template_first-F_Paste.gbr  coil_template_first-F_Silkscreen.gbr  coil_template_first-NPTH.drl  coil_template_first-PTH.drl  coil_template_first-job.gbrjob  coil_template_first.kicad_pcb  (+1 more)
hardware/hdf5/: Bx.hdf5  By.hdf5  Bz.hdf5  Gx.hdf5  Gy.hdf5  Gz.hdf5  panels.hdf5
hardware/notes/: notes-prev.txt  notes.txt
hardware/template/: coil_template.kicad_pcb  coil_template.kicad_prl  coil_template.kicad_pro  fp-info-cache
opmcoils/: __init__.py  biplanar_coil.py  file_io.py  line_drawer.py  make_pcb.py  metrics.py  panels.py  shielding.py
opmcoils/coil_template/: coil_template-B_Cu.gbr  coil_template-B_Mask.gbr  coil_template-B_Paste.gbr  coil_template-B_Silkscreen.gbr  coil_template-Edge_Cuts.gbr  coil_template-F_Cu.gbr  coil_template-F_Mask.gbr  coil_template-F_Paste.gbr  coil_template-F_Silkscreen.gbr  coil_template-job.gbrjob  coil_template.kicad_pcb  coil_template.kicad_pcb.txt  coil_template.kicad_prl  coil_template.kicad_sch  coil_templateloopA.kicad_pcb
(+177 files in other folders)
